@@ -1389,6 +1389,11 @@
                 <p>Prove <xref ref="property-DMAM" acro="DMAM"/> of <xref ref="theorem-VSPM" acro="VSPM"/>.  Write your proof in the style of the proof of <xref ref="property-DSAM" acro="DSAM"/> given in this section.</p>
             </statement>
         </exercise>
+        <exercise number="T25" xml:id="exercise-MO-T25">
+            <statement>
+                <p>Prove that the transpose of an upper triangular matrix is a lower triangular matrix.  Or vice-versa, your choice.</p>
+            </statement>
+        </exercise>
         <exercisegroup>
             <introduction>
                 <p>A matrix <m>A</m> is <term>skew-symmetric</term> if <m>\transpose{A}=-A</m>  Exercises T30<ndash/>T37 employ this definition.</p>
